feat: add client, swagger, docs
